tests/toylang/neg/001256_mutation.toylang
program a = { sleep program a = { } . } .
